# Stencil-Shadows

./: CMakeLists.txt  LICENSE  README.md
Headers/: camera.hpp  get_file.hpp  light.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
Include/glad/: glad.h
Resources/Models/Circle/: circle.gltf
Resources/Models/Floor/: Material Roughness.jpg~  floor.gltf
Resources/Models/Graffiti/: graffiti.gltf
Resources/Models/Grass/: grass.gltf
Resources/Models/Torus/: torus.gltf
Resources/Models/outsourced_bunny/: scene.gltf
Resources/Shaders/Model/: blank.geom  debug_light.frag  debug_light.geom  debug_light.vert  debug_line.vert  fog.frag  fog.vert  line_normals.frag  line_normals.geom  lit_basic.frag  lit_basic.vert  lit_grass.frag  lit_grass.vert  monotone_outline.frag  monotone_outline.vert  stencil.frag  stencil.geom  stencil.vert  unlit_basic.frag  unlit_basic.vert
Resources/Shaders/Screen/: acid_sharpen.frag  black_and_white.frag  blur.frag  calm_sharpen.frag  cartoon.frag  cartoon2.frag  clamp.frag  color_correct_edge.frag  debug.frag  edge.frag  saturate.frag  screen.frag  screen.vert  sharpen.frag
Scripts/: camera.cpp  get_file.cpp  glad.c  light.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
